--- a/.sequelizerc
+++ b/.sequelizerc
@@ -4,6 +4,6 @@ const { resolve, dirname } = require('path')
 module.exports = {
     config: resolve( __dirname, 'src' , 'config' , 'database.js'),
     'models-path': resolve( __dirname, 'src' , 'app' , 'models'),
-    'migrations-path': resolve( __dirnmae, 'src' , 'database' , 'migrations')
+    'migrations-path': resolve( __dirname, 'src' , 'database' , 'migrations')
 }
 
